# sedenion-engine

./: Cargo.toml  contributing.md  index.d.ts  index.js  package.json  readme.md  todo.md
.github/workflows/: test.yml
__test__/rpn/: addition.spec.mjs
examples/: numeric_evaluator.rs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: error.rs  lib.rs
src/grammar/: numeric_evaluator.pest  sedenion.pest
src/math/: angle.rs  mod.rs  round.rs
src/numeric_evaluator/: evaluator.rs  mod.rs  parser.rs  token.rs
src/optimizer/: mod.rs  optimizer.rs
src/parser/: mod.rs  parser.rs  token.rs
src/tests/: evaluator.rs  mod.rs  optimizer.rs  parser.rs  round.rs
