[package]
edition = "2021"
name = "solvurus_engine"
version = "0.1.2"
repository = "https://github.com/antoKeinanen/solvurus-engine"
license = "GNU GPLv3"
license-file = "LICENSE"
readme = "readme.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pest = "2.6"
pest_derive = "2.6"
lazy_static = "1.4.0"
thiserror = "1.0.44"
anyhow = "1.0.72"
wasm-bindgen = "0.2.87"
